// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<SessionManagerTab /> Device verification does not allow device verification on session that do not support encryption 1`] = `
HTMLCollection [
  <div
    class="mx_DeviceSecurityCard"
  >
    <div
      class="mx_DeviceSecurityCard_icon Unverified"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
        />
      </svg>
    </div>
    <div
      class="mx_DeviceSecurityCard_content"
    >
      <p
        class="mx_DeviceSecurityCard_heading"
      >
        Unverified session
      </p>
      <p
        class="mx_DeviceSecurityCard_description"
      >
        This session doesn't support encryption and thus can't be verified.
        <div
          class="mx_AccessibleButton mx_LearnMore_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
          role="button"
          tabindex="0"
        >
          Learn more
        </div>
      </p>
    </div>
  </div>,
]
`;

exports[`<SessionManagerTab /> Sign out Signs out of current device 1`] = `
<div
  class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_inline"
  data-testid="device-detail-sign-out-cta"
  role="button"
  tabindex="0"
>
  <span
    class="mx_DeviceDetails_signOutButtonContent"
  >
    Sign out of this session
  </span>
</div>
`;

exports[`<SessionManagerTab /> Sign out for an OIDC-aware server Signs out of current device 1`] = `
<div
  class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_inline"
  data-testid="device-detail-sign-out-cta"
  role="button"
  tabindex="0"
>
  <span
    class="mx_DeviceDetails_signOutButtonContent"
  >
    Sign out of this session
  </span>
</div>
`;

exports[`<SessionManagerTab /> current session section renders current session section with a verified session 1`] = `
<div
  class="mx_SettingsSubsection"
  data-testid="current-session-section"
>
  <div
    class="mx_SettingsSubsectionHeading"
  >
    <h3
      class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
    >
      Current session
    </h3>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Options"
      class="mx_AccessibleButton"
      data-testid="current-session-menu"
      role="button"
      tabindex="0"
    >
      <svg
        class="mx_KebabContextMenu_icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
        />
      </svg>
    </div>
  </div>
  <div
    class="mx_SettingsSubsection_content"
  >
    <div
      class="mx_DeviceTile mx_DeviceTile_interactive"
      data-testid="device-tile-alices_device"
    >
      <div
        class="mx_DeviceTypeIcon"
      >
        <div
          class="mx_DeviceTypeIcon_deviceIconWrapper"
        >
          <div
            aria-label="Unknown session type"
            class="mx_DeviceTypeIcon_deviceIcon"
            role="img"
          />
        </div>
        <svg
          aria-label="Verified"
          class="mx_DeviceTypeIcon_verificationIcon verified"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.106 2.447a2 2 0 0 1 1.789 0l6 3A2 2 0 0 1 20 7.237V12c0 6.742-5.773 9.246-7.51 9.846-.32.111-.66.111-.98 0C9.774 21.246 4 18.743 4 12V7.236a2 2 0 0 1 1.105-1.789zm4.601 6.846a1 1 0 0 0-1.414 0L11 12.586l-1.293-1.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0 0-1.414"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="mx_DeviceTile_info"
      >
        <h4
          class="mx_Heading_h4"
        >
          Alices device
        </h4>
        <div
          class="mx_DeviceTile_metadata"
        >
          <span
            data-testid="device-metadata-isVerified"
          >
            Verified
          </span>
           · 
          <span
            data-testid="device-metadata-deviceId"
          >
            alices_device
          </span>
        </div>
      </div>
      <div
        class="mx_DeviceTile_actions"
      >
        <div
          aria-label="Show details"
          class="mx_AccessibleButton mx_DeviceExpandDetailsButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_icon"
          data-testid="current-session-toggle-details"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_DeviceExpandDetailsButton_icon"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
            />
          </svg>
        </div>
      </div>
    </div>
    <br />
    <div
      class="mx_DeviceSecurityCard"
    >
      <div
        class="mx_DeviceSecurityCard_icon Verified"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.106 2.447a2 2 0 0 1 1.789 0l6 3A2 2 0 0 1 20 7.237V12c0 6.742-5.773 9.246-7.51 9.846-.32.111-.66.111-.98 0C9.774 21.246 4 18.743 4 12V7.236a2 2 0 0 1 1.105-1.789zm4.601 6.846a1 1 0 0 0-1.414 0L11 12.586l-1.293-1.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0 0-1.414"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="mx_DeviceSecurityCard_content"
      >
        <p
          class="mx_DeviceSecurityCard_heading"
        >
          Verified session
        </p>
        <p
          class="mx_DeviceSecurityCard_description"
        >
          Your current session is ready for secure messaging.
          <div
            class="mx_AccessibleButton mx_LearnMore_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
            role="button"
            tabindex="0"
          >
            Learn more
          </div>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SessionManagerTab /> current session section renders current session section with an unverified session 1`] = `
<div
  class="mx_SettingsSubsection"
  data-testid="current-session-section"
>
  <div
    class="mx_SettingsSubsectionHeading"
  >
    <h3
      class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
    >
      Current session
    </h3>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Options"
      class="mx_AccessibleButton"
      data-testid="current-session-menu"
      role="button"
      tabindex="0"
    >
      <svg
        class="mx_KebabContextMenu_icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
        />
      </svg>
    </div>
  </div>
  <div
    class="mx_SettingsSubsection_content"
  >
    <div
      class="mx_DeviceTile mx_DeviceTile_interactive"
      data-testid="device-tile-alices_device"
    >
      <div
        class="mx_DeviceTypeIcon"
      >
        <div
          class="mx_DeviceTypeIcon_deviceIconWrapper"
        >
          <div
            aria-label="Unknown session type"
            class="mx_DeviceTypeIcon_deviceIcon"
            role="img"
          />
        </div>
        <svg
          aria-label="Unverified"
          class="mx_DeviceTypeIcon_verificationIcon unverified"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
      <div
        class="mx_DeviceTile_info"
      >
        <h4
          class="mx_Heading_h4"
        >
          Alices device
        </h4>
        <div
          class="mx_DeviceTile_metadata"
        >
          <span
            data-testid="device-metadata-isVerified"
          >
            Unverified
          </span>
           · 
          <span
            data-testid="device-metadata-deviceId"
          >
            alices_device
          </span>
        </div>
      </div>
      <div
        class="mx_DeviceTile_actions"
      >
        <div
          aria-label="Show details"
          class="mx_AccessibleButton mx_DeviceExpandDetailsButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_icon"
          data-testid="current-session-toggle-details"
          role="button"
          tabindex="0"
        >
          <svg
            class="mx_DeviceExpandDetailsButton_icon"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
            />
          </svg>
        </div>
      </div>
    </div>
    <br />
    <div
      class="mx_DeviceSecurityCard"
    >
      <div
        class="mx_DeviceSecurityCard_icon Unverified"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
      <div
        class="mx_DeviceSecurityCard_content"
      >
        <p
          class="mx_DeviceSecurityCard_heading"
        >
          Unverified session
        </p>
        <p
          class="mx_DeviceSecurityCard_description"
        >
          Verify your current session for enhanced secure messaging.
          <div
            class="mx_AccessibleButton mx_LearnMore_button mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
            role="button"
            tabindex="0"
          >
            Learn more
          </div>
        </p>
        <div
          class="mx_DeviceSecurityCard_actions"
        >
          <div
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
            data-testid="verification-status-button-alices_device"
            role="button"
            tabindex="0"
          >
            Verify session
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SessionManagerTab /> goes to filtered list from security recommendations 1`] = `
<div
  class="mx_FilteredDeviceListHeader"
>
  <span
    tabindex="0"
  >
    <form
      class="_root_19upo_16"
    >
      <div
        class="_inline-field_19upo_32"
      >
        <div
          class="_inline-field-control_19upo_44"
        >
          <div
            class="_container_1md5v_10"
          >
            <input
              aria-label="Select all"
              aria-labelledby="_r_4q_"
              class="_input_1md5v_18"
              data-testid="device-select-all-checkbox"
              id="device-select-all-checkbox"
              type="checkbox"
            />
            <div
              class="_ui_1md5v_19"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="_inline-field-body_19upo_38"
        />
      </div>
    </form>
  </span>
  <span
    class="mx_FilteredDeviceListHeader_label"
  >
    Sessions
  </span>
  <div
    class="mx_Dropdown mx_FilterDropdown"
  >
    <div
      aria-describedby="device-list-filter_value"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Filter devices"
      aria-owns="device-list-filter_input"
      class="mx_AccessibleButton mx_Dropdown_input mx_no_textinput"
      role="button"
      tabindex="0"
    >
      <div
        class="mx_Dropdown_option"
        id="device-list-filter_value"
      >
        Show: Unverified
      </div>
      <svg
        class="mx_Dropdown_arrow"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
    </div>
  </div>
</div>
`;
